...
            child: OutlinedButton(
                onPressed: _clearFilters, child: const Text('Очистить'),),
          ),
          const SizedBox(width: 16),
          Expanded(
            child: ElevatedButton(
                onPressed: _applyFilters, child: const Text('Применить'),),
          ),
        ],
      );

  Future<void> _selectFromDate() async {
    final date = await showDatePicker(
...
